BUG: removed button:hover background-color as it stopped feedback for answers to be visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,6 @@ h3 {
 }
 
 .button:hover {
-    background-color: #FF7F11;
     box-shadow: 5px 10px 18px #252525;
 }
 
